	capabilities from PCI 3.0 specs.

	* lspci.c: All known capabilities have at least their name displayed
	now. When we are unable to decode them completely, we signalize it
	with a `<?>' mark.

	* lspci.man: Document `<?>' and also mention that extended config
	space is currently available only with the linux_sysfs back-end.

	* lspci.c: Decode the Debug port capability (per EHCI 0.96 spec).

2007-10-14  Martin Mares <mj@ucw.cz>

	* lib/[fno]bsd-*: Removed extraneous braces.

2007-10-12  Martin Mares <mj@ucw.cz>

	* Capability loop detection introduced 2.2.7 did not work
	  properly with extended capabilities. Fixed.

2007-10-05  Martin Mares <mj@ucw.cz>

	* Released as 2.2.7.

	* lspci.c (show_caps, show_ext_caps): Detect and report loops in
	capability lists.

	* lspci.c, lib/header.h: Finished decoding of the PCI Express
	capability. The extended capabilities remain undecoded for now,
	but at least the list of them has been updated to reflect the
	current PCI Express 2.0 spec.

	* lspci.c, lib/header.h: Decode new bits of traditional registers
	as defined by PCIE / PCI-X. This includes discard timers in the bridge
	control register and INTx enable/status in device control/status
	registers.

	* lib/fbsd-device.c: Support domains on new FreeBSD's. Contributed
	by Marius Strobl.

2007-09-12  Hasso Tepper <hasso@estpak.ee>

	* Extended the fbsd-device backend to run on Dragonfly BSD.

	* lspci.c: alloca() is declared in <stdlib.h> on BSD's, not <alloca.h>.

2007-09-03  Martin Mares <mj@ucw.cz>

	* Resurrected the Windows port, including cross-compilation by MinGW.
	Patch by Samuel Bronson <naesten@gmail.com>.

2007-08-31  Martin Mares <mj@ucw.cz>

	* Makefile, lib/Makefile: `ar' and `ranlib' can be overriden to allow
	cross-compilation.

2007-08-27  Martin Mares  <mj@ucw.cz>

	* lib/names.c (pci_open): When calling gzopen(), use "rb" file mode
	instead of "r". This is needed on DOS systems, where this function